--- a/runner/index.html
+++ b/runner/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
+        <img src='logo.svg' width='50' height='50' alt='Logo for the WPT Runner'>
         Web Platform Tests Runner
       </a>
     </div>
