--- a/html/semantics/forms/the-input-element/type-change-state.html
+++ b/html/semantics/forms/the-input-element/type-change-state.html
@@ -23,7 +23,7 @@
     { type: "number", sanitizedValue: "" },
     { type: "range", sanitizedValue: "50" },
     { type: "color", sanitizedValue: "#000000" },
-    { type: "checkbox" },
+    { type: "checkbox"},
     { type: "radio" },
     { type: "file" },
     { type: "submit" },
@@ -37,12 +37,19 @@
         test(function() {
           var input = document.createElement("input");
           input.type = types[i].type;
-          input.value = "  foo\rbar  ";
-          input.type = types[j].type;  // change state
-          if (types[j].sanitizedValue || types[j].sanitizedValue === "") {
-            assert_equals(input.value, types[j].sanitizedValue, "input.value should be " + types[j].sanitizedValue + " after change of state");
+          if (types[i].type === "file") {
+            assert_throws("INVALID_STATE_ERR", function() {
+              input.value = "  foo\rbar  ";
+            });
+            assert_equals(input.value, "");
           } else {
-            assert_equals(input.value, "  foo\rbar  ", "input.value should be '  foo\rbar  ' after change of state");
+            input.value = "  foo\rbar  ";
+            input.type = types[j].type;  // change state
+            if (types[j].sanitizedValue || types[j].sanitizedValue === "") {
+              assert_equals(input.value, types[j].sanitizedValue, "input.value should be " + types[j].sanitizedValue + " after change of state");
+            } else {
+              assert_equals(input.value, "  foo\rbar  ", "input.value should be '  foo\\rbar  ' after change of state");
+            }
           }
         }, "change state from " + types[i].type + " to " + types[j].type);
       }
