fix setup and add assertions on value attribute

--- a/html/semantics/forms/the-input-element/password.html
+++ b/html/semantics/forms/the-input-element/password.html
@@ -10,7 +10,7 @@
 <input id="password_with_value" type="password" value="foobar" />
 <script type="text/javascript">
     setup(function() {
-      var password = password;
+      var password = document.getElementById("password");
     });
 
     test(function() {
@@ -21,9 +21,11 @@
     test(function() {
       password.value = "A";
       assert_equals(password.value, "A");
+      assert_equals(password.getAttribute("value"), null);
       password.value = "B";
       assert_equals(password.value, "B");
-    }, "Setting value changes the current value for password");
+      assert_equals(password.getAttribute("value"), null);
+    }, "Setting value changes the current value for password, but not the value content attribute");
 
     test(function() {
       // Any LF (\n) must be stripped.
