Comments processed. For pointerevent_releasecapture_onpointercancel.html - description updated, verification of pointer type is added.

--- a/pointerevents/pointerevent_change-touch-action-onpointerdown_touch.html
+++ b/pointerevents/pointerevent_change-touch-action-onpointerdown_touch.html
@@ -20,7 +20,7 @@
     </head>
     <body onload="run()">
         <h1>Pointer Events touch-action attribute support</h1>
-        <h4>Test Description: Press and hold you touch. Try to scroll text in any direction.
+        <h4>Test Description: Press and hold your touch. Try to scroll text in any direction.
             Then release your touch and try to scroll again. Expected: no panning.
         </h4>
         <p>Note: this test is for touch-devices only
