--- a/pointerevents/pointerevent_pointertype_touch.html
+++ b/pointerevents/pointerevent_pointertype_touch.html
@@ -13,18 +13,20 @@
         <script type="text/javascript">
             var detected_pointertypes = {};
             var test_pointerEvent = async_test("pointer event has pointerType as touch");  // set up test harness
+			var eventTested = false;
             // showPointerTypes is defined in pointerevent_support.js
             // Requirements: the callbakc function will reference the test_pointerEvent object and
             // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
             
             function eventHandler(event) {
-            	check_PointerEvent(event);
-            	test_pointerEvent.step(function () {
-            	    assert_equals(event.pointerType, "touch", "Verify event.pointerType is 'touch'.");
-            	});
-            	detected_pointertypes[event.pointerType] = true;
-            
+				if(!eventTested) {
+					check_PointerEvent(event);
+					test_pointerEvent.step(function () {
+						assert_equals(event.pointerType, "touch", "Verify event.pointerType is 'touch'.");
+					});
+					detected_pointertypes[event.pointerType] = true;
+				}
             	if (event.type == "pointerup") {
             		test_pointerEvent.done(); // complete test
             	}
