--- a/pointerevents/pointerevent_pointerout_after_pointercancel.html
+++ b/pointerevents/pointerevent_pointerout_after_pointercancel.html
@@ -10,8 +10,9 @@
     </head>
     <body onload="run()">
         <h2>pointerout</h2>
-        <h4>Test Description: This test checks if pointerout event triggers after pointercancel. Start you touch on the black rectangle and move your touch like you're scrolling in any direction. </h4>
+        <h4>Test Description: This test checks if pointerout event triggers after pointercancel. Start touch on the black rectangle and move your touch like you're scrolling in any direction. </h4>
         <p>Note: this test is for touch devices only</p>
+        <div id="target0"></div>
         <script>
             var test_pointerout = async_test("pointerout event received");
             // showPointerTypes is defined in pointerevent_support.js
@@ -22,28 +23,30 @@
             var eventTested = false;
             var isPointercancelReceived = false;
             var detected_pointertypes = {};
-
-            var count = 0;
             
             function run() {
             	var target0 = document.getElementById("target0");
 
                 on_event(target0, "pointercancel", function (event) {
                     isPointercancelReceived = true;
-                    log("pointercancel", target0);
                 });
 
                 // After firing the pointercancel event the pointerout event must be dispatched.
                 // TA: 7.6
                 on_event(target0, "pointerout", function (event) {
+                    detected_pointertypes[event.pointerType] = true;
                     if(isPointercancelReceived) {
                         if (eventTested == false) {
-                            detected_pointertypes[event.pointerType] = true;
                             eventTested = true;
                             test_pointerout.done();
                         }
                     }
-                    log("pointerout", target0);
+                    else {
+                        test_pointerout.step(function() {
+            			    assert_true(false,
+            			    "pointercancel received before pointerout");
+            		    }, "pointercancel received before pointerout");
+                    }
                 });
             }
             
