--- a/pointerevents/pointerevent_pointerout_after_pointerup_nohover.html
+++ b/pointerevents/pointerevent_pointerout_after_pointerup_nohover.html
@@ -12,6 +12,7 @@
         <h2>pointerout</h2>
         <h4>Test Description: This test checks if pointerout event triggers for devices that don't support hover. Tap the black rectangle. </h4>
         <p>Note: this test is for devices that doesn't support hover only</p>
+        <div id="target0"></div>
         <script>
             var test_pointerout = async_test("pointerout event received");
             // showPointerTypes is defined in pointerevent_support.js
@@ -22,7 +23,6 @@
             var eventTested = false;
             var isPointerupReceived = false;
             var detected_pointertypes = {};
-			
             
             function run() {
             	var target0 = document.getElementById("target0");
@@ -34,12 +34,18 @@
                 // When touch, a device that does not support hover, after firing the pointerup event the pointerout event must be dispatched.
                 // TA: 7.5
                 on_event(target0, "pointerout", function (event) {
+                    detected_pointertypes[event.pointerType] = true;
                     if(isPointerupReceived) {
                         if (eventTested == false) {
-                            detected_pointertypes[event.pointerType] = true;
                             eventTested = true;
                             test_pointerout.done();
                         }
+                    }
+                    else {
+                        test_pointerout.step(function() {
+            			    assert_true(false,
+            			    "pointerup received before pointerout");
+            		    }, "pointerup received before pointerout");
                     }
                 });
             }
