--- a/pointerevents/pointerevent_pointerout_pen.html
+++ b/pointerevents/pointerevent_pointerout_pen.html
@@ -10,8 +10,9 @@
     </head>
     <body onload="run()">
         <h2>pointerout</h2>
-        <h4>Test Description: This test checks if pointerout event triggers for pen. Place your pen over the black rectangle and then replace it. </h4>
-        <p>Note: this test is for devices that support hover for pen only</p>
+        <h4>Test Description: This test checks if pointerout event triggers for pen. Place your pen over the black rectangle and then move it out. </h4>
+        <p>Note: this test is for devices that support hover - for pen only</p>
+        <div id="target0"></div>
         <script>
             var test_pointerout = async_test("pointerout event received");
             // showPointerTypes is defined in pointerevent_support.js
