--- a/pointerevents/pointerevent_change-touch-action-onpointerdown_touch.html
+++ b/pointerevents/pointerevent_change-touch-action-onpointerdown_touch.html
@@ -23,8 +23,7 @@
         <h4>Test Description: Press and hold your touch. Try to scroll text in any direction.
             Then release your touch and try to scroll again. Expected: no panning.
         </h4>
-        <p>Note: this test is for touch-devices only
-        <p>
+        <p>Note: this test is for touch-devices only</p>
         <div id="target0" style="touch-action: auto;">
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
@@ -129,7 +128,6 @@
         <h1>touch-action: auto to none</h1>
         <div id="complete-notice">
             <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-            <p>Would you like to <a href="#">run the tests again</a> with a different pointer type?</p>
         </div>
         <div id="log"></div>
     </body>
