Addressing abucur's comments

--- a/contributors/adobe/submitted/regions/floats/floats-clear-breaks-001.html
+++ b/contributors/adobe/submitted/regions/floats/floats-clear-breaks-001.html
@@ -61,7 +61,7 @@
 		<div class="bordered region">
 			<p>&nbsp;</p>
 		</div>
-		<!-- In case the clear + forced break lead to an empty region, the content will flow in this
+		<!-- In case the forced break leads to an empty region, the content will flow in this
 		third region ending up without a border. -->
 		<div class="region">
 			<p>&nbsp;</p>
