--- a/contributors/adobe/submitted/regions/floats/floats-clear-breaks-002.html
+++ b/contributors/adobe/submitted/regions/floats/floats-clear-breaks-002.html
@@ -6,7 +6,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://dev.w3.org/csswg/css-break/#parallel-flows">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that no extraneous regions are created when setting
+		<meta name="assert" content="Test checks that no regions are left empty when setting
 				a forced region break on a cleared float.">
 		<link rel="match" href="reference/floats-clear-breaks-002-ref.html">
 		<style>
