--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-004.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-004.html
@@ -6,9 +6,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#regions-visual-formatting-details">
 		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that floats from different containers, individually
-				flowed in a region are floated relative to the region container and not their
-				initial container and the region is correctly sized.">
+		<meta name="assert" content="Test checks that floats added to a named flow from different containers are stacked relative to the region container (not their initial container) and the region is correctly sized.">
 		<link rel="match" href="reference/floats-in-named-flow-004-ref.html">
 		<style>
 		.flow {
