--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-007.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-007.html
@@ -6,8 +6,8 @@
 		<link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that floats in named flow contents are floated relative
-				to the region container and not their initial container, even when multiple regions
+		<meta name="assert" content="Test checks that floats in named flows are positioned relative
+				to their regions and not their initial container, even when multiple regions
 				are involved and the named flow contents come from different block formatting contexts.">
 		<link rel="match" href="reference/floats-in-named-flow-006-ref.html">
 		<style>
