--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-006.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-006.html
@@ -5,10 +5,7 @@
 		<link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that floats in named flow contents are floated relative
-				to the region container they are laid out in and not their initial container, even 
-				when the named flow is fragmented in multiple regions (but the floats themselves are
-				not fragmented).">
+		<meta name="assert" content="Test checks that floats in named flow contents are positioned relative to their containing regions.">
 		<link rel="match" href="reference/floats-in-named-flow-006-ref.html">
 		<style>
 		.flow {
