--- a/html/dom/documents/resource-metadata-management/document-lastModified.html
+++ b/html/dom/documents/resource-metadata-management/document-lastModified.html
@@ -8,7 +8,8 @@
 <div id="log"></div>
 <script>
   test(function(){
-    var regexp = /^(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])\/\d\d\d\d ([01][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9])$/;
-    assert_true(regexp.test(document.lastModified));
+    var date = new Date("Thu, 1 Jan 1970 01:23:45 GMT");
+    var result = date.toLocaleDateString() + " " + [date.getHours(),date.getMinutes(),date.getSeconds()].map(function(n){return ("0" + n).slice(-2);}).join(":");
+    assert_equals(document.lastModified, result);
   }, "lastModified format");
 </script>
