Don't put pass condition in test titles.

--- a/conformance-checkers/html/elements/meta/registered-names-isvalid.html
+++ b/conformance-checkers/html/elements/meta/registered-names-isvalid.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>Registered extensions to the predefined set of metadata names must be
-considered valid and must be compared in an ASCII case-insensitive manner</title>
+<title>Registered extensions to the predefined set of metadata names</title>
 <meta name="aglsterms.accessibility" content>
 <meta name="AGLSTERMS.ACCESSIBILITY" content>
 <meta name="AgLsTeRmS.AcCeSsIbIlItY" content>
@@ -557,6 +556,9 @@ considered valid and must be compared in an ASCII case-insensitive manner</title
 <meta name="p:domain_verify" content>
 <meta name="P:DOMAIN_VERIFY" content>
 <meta name="P:DoMaIn_vErIfY" content>
+<meta name="pingdom" content>
+<meta name="PINGDOM" content>
+<meta name="PiNgDoM" content>
 <meta name="pinterest" content>
 <meta name="PINTEREST" content>
 <meta name="PiNtErEsT" content>
@@ -590,6 +592,9 @@ considered valid and must be compared in an ASCII case-insensitive manner</title
 <meta name="rpuplugin" content>
 <meta name="RPUPLUGIN" content>
 <meta name="RpUpLuGiN" content>
+<meta name="rqid" content>
+<meta name="RQID" content>
+<meta name="RqId" content>
 <meta name="signet:authors" content>
 <meta name="SIGNET:AUTHORS" content>
 <meta name="SiGnEt:aUtHoRs" content>
