--- a/conformance-checkers/html/elements/meta/standard-names-isvalid.html
+++ b/conformance-checkers/html/elements/meta/standard-names-isvalid.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Standard metadata names must be considered valid
-and must be compared in an ASCII case-insensitive manner</title>
+<title>Standard metadata names</title>
 <!-- all lowercase-->
 <meta name="application-name" content>
 <meta name="author" content>
