--- a/tools/runner/index.html
+++ b/tools/runner/index.html
@@ -72,12 +72,12 @@
         <div class="form-group">
           <label for="path" class="col-sm-3 control-label">Run tests under path</label>
           <div class="col-sm-9">
-            <input value="/" id='path' class='path form-control'>
+            <input value="/" id='path' class='path form-control' disabled>
           </div>
         </div>
         <div class="form-group" style='padding-top: 20px'>
           <div class="col-sm-offset-3 col-sm-9">
-            <button type="button" class="btn btn-success toggleStart">Start</button>
+            <button type="button" class="btn btn-success toggleStart" disabled>Start</button>
             <button type='button' class="btn btn-info togglePause" disabled>Pause</button>
           </div>
         </div>
