--- a/webdriver/element_state/res/a-with-href-attribute.html
+++ b/webdriver/element_state/res/a-with-href-attribute.html
@@ -2,4 +2,4 @@
 <meta charset="utf-8" />
 <title>"a" element with not fully qualified url</title>
 
-<a href="//example.com/path#fragment">&nbsp;</a>
+<a href="//web-platform.test:8000/path#fragment">&nbsp;</a>
